# ai-final

azureml-tf/: README.md  aks.tf  main.tf  terraform.tfvars  variables.tf
bottom-up/: pyproject.toml  requirements.txt
bottom-up/notebooks/: ml-diabetes.ipynb
top-down/: chatbot.py
