[tool.poetry]
name = "diabetes-bottom-up"
version = "0.1.0"
description = ""
authors = ["smadi0x86 <smadixd@gmail.com>"]
license = "GNU v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
